force-app/main/default/objects/Program__c/Program__c.object-meta.xml
<CustomObject>
    <label>תוכנית</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>תוכניות</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>