force-app/main/default/objects/Program__c/fields/External_Program_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Program_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Program Id</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>