force-app/main/default/objects/Program__c/fields/Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Program Landing Page</label>
    <type>Url</type>
</CustomField>