force-app/main/default/objects/Program__c/fields/Program_Description__c.field-meta.xml
<CustomField>
    <fullName>Program_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Program Description</label>
    <type>TextArea</type>
</CustomField>